Prevent Project Leads text from wrapping

--- a/css/argo.css
+++ b/css/argo.css
@@ -142,12 +142,18 @@
     padding-top: clamp(28px, 3.1vw, 45px);
 }
 
-.argo-scope-bar__client,
-.argo-scope-bar__leads {
+.argo-scope-bar__client {
     display: flex;
     flex-direction: column;
     /* Width scales - 348px at 1440px = ~24.2vw */
     width: clamp(200px, 24.2vw, 348px);
+}
+
+.argo-scope-bar__leads {
+    display: flex;
+    flex-direction: column;
+    width: clamp(200px, 24.2vw, 348px);
+    white-space: nowrap;
 }
 
 .argo-scope-bar__heading {
